--- a/demo-cluster/team-platform/apps.yaml
+++ b/demo-cluster/team-platform/apps.yaml
@@ -9,42 +9,43 @@
     - cert-manager.yaml
   autoSync:
     enabled: true
-- name: kagent-crds
-  owner: platform
-  project: platform
-  namespace: kagent
-  repo: ghcr.io/kagent-dev/kagent/helm
-  chart: kagent-crds
-  version: "*"
-  valueFiles: []
-  autoSync:
-    enabled: true
-- name: kagent
-  owner: platform
-  project: platform
-  namespace: kagent
-  repo: ghcr.io/kagent-dev/kagent/helm
-  chart: kagent
-  version: "*"
-  valueFiles:
-    - kagent.yaml
-  autoSync:
-    enabled: true
-- name: kyverno
-  owner: platform
-  project: security
-  namespace: kyverno
-  repo: https://kyverno.github.io/kyverno
-  chart: kyverno
-  version: 3.4.*
-  valueFiles:
-    - kyverno.yaml
-  autoSync:
-    enabled: true
-  ignoreDifferences:
-    - group: apiextensions.k8s.io
-      kind: CustomResourceDefinition
-      name: policies.kyverno.io
-    - group: apiextensions.k8s.io
-      kind: CustomResourceDefinition
-      name: clusterpolicies.kyverno.io
+#- name: kagent-crds
+#  owner: platform
+#  project: platform
+#  namespace: kagent
+#  repo: ghcr.io/kagent-dev/kagent/helm
+#  chart: kagent-crds
+#  version: "*"
+#  valueFiles: []
+#  autoSync:
+#    enabled: true
+#- name: kagent
+#  owner: platform
+#  project: platform
+#  namespace: kagent
+#  repo: ghcr.io/kagent-dev/kagent/helm
+#  chart: kagent
+#  version: "*"
+#  valueFiles:
+#    - kagent.yaml
+#  autoSync:
+#    enabled: true
+#- name: kyverno
+#  owner: platform
+#  project: security
+#  namespace: kyverno
+#  repo: https://kyverno.github.io/kyverno
+#  chart: kyverno
+#  version: 3.4.*
+#  valueFiles:
+#    - kyverno.yaml
+#  autoSync:
+#    enabled: true
+#  ignoreDifferences:
+#    - group: apiextensions.k8s.io
+#      kind: CustomResourceDefinition
+#      name: policies.kyverno.io
+#    - group: apiextensions.k8s.io
+#      kind: CustomResourceDefinition
+#      name: clusterpolicies.kyverno.io
+#
