--- a/demo-cluster/.bootstrap/app-of-apps.yaml
+++ b/demo-cluster/.bootstrap/app-of-apps.yaml
@@ -4,7 +4,7 @@ metadata:
   name: app-of-apps
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    - "resources-finalizer.argocd.argoproj.io"
 spec:
   project: default
   revisionHistoryLimit: 5
