--- a/demo-cluster/team-platform/apps.yaml
+++ b/demo-cluster/team-platform/apps.yaml
@@ -9,27 +9,27 @@
     - cert-manager.yaml
   autoSync:
     enabled: true
-#- name: kagent-crds
-#  owner: platform
-#  project: platform
-#  namespace: kagent
-#  repo: ghcr.io/kagent-dev/kagent/helm
-#  chart: kagent-crds
-#  version: "*"
-#  valueFiles: []
-#  autoSync:
-#    enabled: true
-#- name: kagent
-#  owner: platform
-#  project: platform
-#  namespace: kagent
-#  repo: ghcr.io/kagent-dev/kagent/helm
-#  chart: kagent
-#  version: "*"
-#  valueFiles:
-#    - kagent.yaml
-#  autoSync:
-#    enabled: true
+- name: kagent-crds
+  owner: platform
+  project: platform
+  namespace: kagent
+  repo: ghcr.io/kagent-dev/kagent/helm
+  chart: kagent-crds
+  version: "*"
+  valueFiles: []
+  autoSync:
+    enabled: true
+- name: kagent
+  owner: platform
+  project: platform
+  namespace: kagent
+  repo: ghcr.io/kagent-dev/kagent/helm
+  chart: kagent
+  version: "*"
+  valueFiles:
+    - kagent.yaml
+  autoSync:
+    enabled: true
 #- name: kyverno
 #  owner: platform
 #  project: security
