--- a/playgrounds/kind/config/cilium.yaml
+++ b/playgrounds/kind/config/cilium.yaml
@@ -15,6 +15,9 @@ ipam:
 routingMode: native
 ipv4NativeRoutingCIDR: 10.42.0.0/16
 
+externalIPs:
+  enabled:true
+  
 autoDirectNodeRoutes: true
 l2announcements:
   enabled: true
