--- a/demo-cluster/team-platform/values/kagent.yaml
+++ b/demo-cluster/team-platform/values/kagent.yaml
@@ -1,12 +1,12 @@
 replicaCount: 1
 
 providers:
-  default: openAI
-  openAI:
-    provider: OpenAI
-    model: "gpt-4.1-mini"
-    apiKeySecretRef: kagent-openai
-    apiKeySecretKey: OPENAI_API_KEY
+  default: ollama
+  ollama:
+    provider: Ollama
+    model: "mistral"
+    config:
+      host: http://ollama.ollama.svc.cluster.local
 
 database:
   type: sqlite
