--- a/playgrounds/kind/addons/ollama.yaml
+++ b/playgrounds/kind/addons/ollama.yaml
@@ -27,6 +27,13 @@ spec:
           volumeMounts:
             - name: model-cache
               mountPath: /root/.ollama
+          resources:
+            requests:
+              memory: "4Gi"
+              cpu: "1"
+            limits:
+              memory: "5Gi"
+              cpu: "2"
       volumes:
         - name: model-cache
           emptyDir: {}
