--- a/demo-cluster/team-platform/values/kagent.yaml
+++ b/demo-cluster/team-platform/values/kagent.yaml
@@ -4,9 +4,9 @@ providers:
   default: ollama
   ollama:
     provider: Ollama
-    model: "hermes-2-pro-llama-3-8b"
+    model: "llama-3"
     config:
-      host: http://ollama-model-hermes-2-pro-llama-3-8b.ollama-apps.svc.cluster.local:11434
+      host: http://ollama-model-llama-3.ollama-apps.svc.cluster.local:11434
 
 database:
   type: sqlite
