--- a/playgrounds/kind/ollama/model.yaml
+++ b/playgrounds/kind/ollama/model.yaml
@@ -1,7 +1,7 @@
 apiVersion: ollama.ayaka.io/v1
 kind: Model
 metadata:
-  name: mistral
+  name: tinyllama
   namespace: ollama-apps
 spec:
-  image: ollama/mistral
+  image: ollama/tinyllama
