use tinyllama model

--- a/demo-cluster/.k8s-gen/manifests.yaml
+++ b/demo-cluster/.k8s-gen/manifests.yaml
@@ -17,6 +17,12 @@ kind: Namespace
 metadata:
   name: kyverno
 ---
+# Source: gitops-chart/templates/namespace.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: ollama-apps
+---
 # Source: gitops-chart/templates/project.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
@@ -30,6 +36,8 @@ spec:
       namespace: argocd
     - server: https://kubernetes.default.svc
       namespace: kagent
+    - server: https://kubernetes.default.svc
+      namespace: ollama-apps
   sourceRepos:
     - https://github.com/qasmi/smart-idp.git
     - ghcr.io/kagent-dev/kagent/helm
