use mistral model

--- a/demo-cluster/team-platform/values/kagent.yaml
+++ b/demo-cluster/team-platform/values/kagent.yaml
@@ -6,7 +6,7 @@ providers:
     provider: Ollama
     model: "mistral"
     config:
-      host: http://ollama-model-mistrals.ollama-apps.svc.cluster.local:11434
+      host: http://ollama-model-mistral.ollama-apps.svc.cluster.local:11434
 
 database:
   type: sqlite
