--- a/demo-cluster/team-platform/values/kagent.yaml
+++ b/demo-cluster/team-platform/values/kagent.yaml
@@ -1,12 +1,12 @@
 replicaCount: 1
 
 providers:
-  default: ollama
-  ollama:
-    provider: Ollama
-    model: "mistral-small"
-    config:
-      host: http://ollama.ollama-apps.svc.cluster.local:11434
+  default: openAI
+  openAI:
+    provider: OpenAI
+    model: "gpt-4.1-mini"
+    apiKeySecretRef: kagent-openai
+    apiKeySecretKey: OPENAI_API_KEY
 
 database:
   type: sqlite
