--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -15,4 +15,5 @@ jobs:
 
       - name: Invoke KAgent
         run: |
+          curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/main/scripts/get-kagent | bash
           kagent invoke --agent k8s-agent --api-url "http://demo-smart-idp.uk/api" --task "Get the pods in the kagent namespace"
