--- a/demo-cluster/team-platform/values/kagent.yaml
+++ b/demo-cluster/team-platform/values/kagent.yaml
@@ -48,7 +48,7 @@ kagent-tools:
 
 agents:
   k8s-agent:
-    enabled: false
+    enabled: true
   kgateway-agent:
     enabled: false
   istio-agent:
