--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -16,4 +16,5 @@ jobs:
       - name: Invoke KAgent
         run: |
           curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/main/scripts/get-kagent | bash
+          kagent install --kagent-url "http://demo-smart-idp.uk/api"
           kagent --kagent-url "http://demo-smart-idp.uk/api" invoke --agent k8s-agent  --task "Get the pods in the kagent namespace"
