--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -15,6 +15,6 @@ jobs:
 
       - name: Invoke KAgent
         run: |
-          curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/main/scripts/get-kagent | bash
+          curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/0.4.5/scripts/get-kagent | bash
           kagent invoke --help
           #kagent --kagent-url "http://demo-smart-idp.uk/api" invoke --agent k8s-agent  --task "Get the pods in the kagent namespace"
