--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -17,4 +17,5 @@ jobs:
         run: |
           curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/0.4.5/scripts/get-kagent | bash
           kagent invoke --help
+          cat /home/runner/.kagent/config.yaml
           kagent --kagent-url "http://demo-smart-idp.uk/api" invoke --agent k8s-agent  --task "Get the pods in the kagent namespace"
