--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -17,5 +17,7 @@ jobs:
         run: |
           curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/main/scripts/get-kagent | bash
           kagent invoke --help
+          sed -i.bak 's|http://localhost:8083|http://demo-smart-idp.uk/api|g' ~/.kagent/config.yaml
           cat /home/runner/.kagent/config.yaml
+          
           kagent --kagent-url "http://demo-smart-idp.uk/api" invoke --agent k8s-agent  --task "Get the pods in the kagent namespace"
