--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Invoke KAgent
         run: |
           curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/main/scripts/get-kagent | bash
-          kagent invoke --help
+          apt install -y curl @@ curl http://demo-smart-idp.uk/health
           sed -i.bak 's|http://localhost:8083|http://demo-smart-idp.uk/api|g' ~/.kagent/config.yaml
           cat /home/runner/.kagent/config.yaml
-          
           kagent --kagent-url "http://demo-smart-idp.uk/api" invoke --agent k8s-agent  --task "Get the pods in the kagent namespace"
