--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/main/scripts/get-kagent | bash
           curl http://demo-smart-idp.uk/health
-          kagent invoke --url-override "http://demo-smart-idp.uk/api" --agent k8s-agent  --task "Get the pods in the kagent namespace"
+          kagent --kagent-url "http://demo-smart-idp.uk/api" invoke --url-override "http://demo-smart-idp.uk/api" --agent k8s-agent  --task "Get the pods in the kagent namespace"
