--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -17,4 +17,5 @@ jobs:
         run: |
           curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/main/scripts/get-kagent | bash
           ls 
-          kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent  --task "what the manifets in demo-cluster/.k8s-gen/manifests.yaml will change in my cluster"
+          file_content=$(< demo-cluster/.k8s-gen/manifests.yaml)
+          kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent  --task "what the manifets will change in my cluster: $file_content"
