fix kmcp installation

--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -16,6 +16,5 @@ jobs:
       - name: Invoke KAgent
         run: |
           curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/main/scripts/get-kagent | bash
-          ls 
           file_content=$(< demo-cluster/.k8s-gen/manifests.yaml)
-          kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent  --task "compare the live state of my cluster with the desired state: $file_content. what this will change in my cluster ?"
+          kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent  --task "compare the live state of my cluster with the desired state: $file_content. what this will change in my cluster ? is there any issue with in desired state when you compare it with the runtime environement ?"
