--- a/demo-cluster/team-platform/apps.yaml
+++ b/demo-cluster/team-platform/apps.yaml
@@ -39,3 +39,13 @@
   valueFiles: []
   autoSync:
     enabled: true
+- name: cert-manager
+  owner: platform
+  project: platform
+  namespace: test
+  repo: https://charts.jetstack.io
+  chart: cert-manager
+  version: "*"
+  valueFiles: []
+  autoSync:
+    enabled: true
