--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -27,4 +27,4 @@ jobs:
         run: |
           PROMPT_FILE="./ci-manifest-prompt.txt"
           kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent --file $PROMPT_FILE  \
-          | jq -r '.result.status.message.parts[0].text'
+          | jq -r '.artifacts[0].parts[0].text'
