--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -3,7 +3,7 @@ name: Invoke KAgent
 on:
   push:
     branches:
-      - main
+      - 'feat/*'
 
 jobs:
   invoke-kagent:
@@ -13,18 +13,48 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: requirements
+      - name: Generate Manifests
         run: |
-          curl https://raw.githubusercontent.com/kagent-dev/kagent/refs/heads/main/scripts/get-kagent | bash
-        
+          cd demo-cluster
+          make
+          cd ..
+          git add .k8s-gen
+          if ! git diff --cached --quiet; then
+            git commit -m "chore: auto-update manifests [ci skip]"
+            git push origin HEAD:${{ github.ref_name }}
+          else
+            echo "No changes to commit."
+          fi
+
+      - name: Install KAgent
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/kagent-dev/kagent/main/scripts/get-kagent | bash
+
+      - name: Build prompt file
+        run: |
           PROMPT_FILE="./ci-manifest-prompt.txt"
-          cat > "$PROMPT_FILE" <<EOF
-          Compare the live state of the cluster with the following manifest. Briefly summarize any misconfigurations or risks that would occur if the manifest is applied. Focus only on real diffs that affect resources, and give very short answers:
-          $(< demo-cluster/.k8s-gen/manifests.yaml)
-          EOF
+          {
+            echo "Compare the live state of the cluster with the following manifest. Briefly summarize any misconfigurations or risks that would occur if the manifest is applied. Focus only on real diffs that affect resources, and give very short answers:"
+            cat demo-cluster/.k8s-gen/manifests.yaml
+          } > "$PROMPT_FILE"
 
       - name: Invoke KAgent
+        id: kagent
         run: |
           PROMPT_FILE="./ci-manifest-prompt.txt"
-          kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent --file $PROMPT_FILE  \
-          | jq -r '.artifacts[0].parts[0].text'
+          RESPONSE=$(kagent --kagent-url "http://demo-smart-idp.uk" invoke --agent k8s-agent --file "$PROMPT_FILE" \
+            | jq -r '.result.status.message.parts[0].text // .result.artifacts[0].parts[0].text')
+          echo "response<<EOF" >> $GITHUB_OUTPUT
+          echo "$RESPONSE" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Add PR comment
+        if: github.event_name == 'pull_request'
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            🤖 **KAgent Analysis**
+            ```
+            ${{ steps.kagent.outputs.response }}
+            ```
