--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -18,7 +18,7 @@ jobs:
           cd demo-cluster
           make
           cd ..
-          git add .k8s-gen/
+          git add ./demo-cluster/.k8s-gen/
           if ! git diff --cached --quiet; then
             git commit -m "chore: auto-update manifests [ci skip]"
             git push origin HEAD:${{ github.ref_name }}
