--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -48,12 +48,12 @@ jobs:
           echo "$RESPONSE" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
-      - name: Add PR comment
-        uses: kagent/create-or-update-comment@v4
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            🤖 **KAgent Analysis**
-            ```
-            ${{ steps.kagent.outputs.response }}
-            ```
+      #- name: Add PR comment
+      #  uses: kagent/create-or-update-comment@v4
+      #  with:
+      #    issue-number: ${{ github.event.pull_request.number }}
+      #    body: |
+      #      🤖 **KAgent Analysis**
+      #      ```
+      #      ${{ steps.kagent.outputs.response }}
+      #      ```
